@@ -220,6 +220,8 @@ ModCallbacks.MC_POST_ROOM_TRANSITION_UPDATE = 1271
 ModCallbacks.MC_POST_ROOM_TRANSITION_RENDER = 1272
 
 ModCallbacks.MC_PRE_BOSS_SELECT = 1280
+ModCallbacks.MC_PRE_PLAYER_ADD_COSTUME = 1281
+ModCallbacks.MC_PRE_PLAYER_REMOVE_COSTUME = 1282
 
 ModCallbacks.MC_PRE_GET_RANDOM_ROOM_INDEX = 1290
 
